fix: UI bugs on on mobile

--- a/src/components/VideoGrid.module.css
+++ b/src/components/VideoGrid.module.css
@@ -18,5 +18,5 @@
 }
 
 .videoGrid {
-  height: calc(100vh - 70px);
+  height: 100%;
 }
